2006-09-20 Eric B. Weddington <eweddington@cso.atmel.com>

	* configure.ac (CHECK_PNG_UTILS): Fix string echo for checking pnmtopng. 
	Fix check for pngtopnm and pnmtopng programs. Add self to authors.
	* doc/api/doxygen.config.in (IMAGE_PATH): Add correct directories.
	* doc/api/doxygen.config.in (LATEX_BATCHMODE): Change to yes so latex will
	run in a batch mode and not query the user if something is amiss.
	* doc/api/tools-install.dox: Remove doxygen warning.
	* doc/examples/asmdemo/asmdemo.dox: Ditto.
	* doc/api/Makefile.am (fix_png): Use the actual RGB numbers instead of
	the color name in case the rgb.txt file cannot be found.
	* doc/api/Makefile.am (doxygen.confg): Remove the dependency on 
	$(top_srcdir)/stamp-h1 as there is no rule in this Makefile to build it, 
	which causes an error. The rule is located in the top level Makefile.

2006-09-14 Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/faq.dox: Add question about why there are five different 
	linker scripts.

2006-09-13 Eric B. Weddington <eweddington@cso.atmel.com>

	Patch #4461 by Anatoly Sokolov <aesok@post.ru>
	* configure.ac: Add support for new devices: ATmega2560, ATmega2561.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* include/avr/wdt.h: Ditto.
	* include/avr/iom2560.h (New File): Ditto.
	* include/avr/iom2561.h (New File): Ditto.

2006-09-11 Eric B. Weddington <eweddington@cso.atmel.com>

	* bootstrap: Allow automake version 1.8.x in addition to 1.9.x. automake
	1.8.2 is available on MinGW/MSYS and with autoconf 2.59 successfully
	builds avr-libc 1.4 branch.

2006-09-01 Eric B. Weddington <eweddington@cso.atmel.com>

	Fix for bug #15512.
	* include/avr/boot.h: Add more documentation describing that global
	interrupts are not disabled for these macros.
	* NEWS: Update fixed bug list.

2006-09-01 Eric B. Weddington <eweddington@cso.atmel.com>
