@@ -10,6 +10,7 @@
   [#16411] Add 'used' and 'externally_visible' attributes to all ISR macros.
   [#16441] eeprom.h should use __asm__
   [#17068] wdt.h file: __AVR_ATmeg324P__ spelling mistake
+  [#17608] Add ISR_ALIAS() to avr/interrupt.h
 
 * Other changes:
 
